--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Preview</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your CSS file -->
+    <title>Percentage of Occupied Housing per Census Tract in Miami</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>                <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
