--- a/post.html
+++ b/post.html
@@ -57,7 +57,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Percentage of Occupied Housing by Census Tracts in Miami</h2>
-                        <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami">                        
+                        <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="300" height="200">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
                         <p>beep</p>
                         <h2 class="section-heading">Tools</h2>
