--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: "goodeh.jpg">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -57,20 +57,11 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Percentage of Occupied Housing by Census Tracts in Miami</h2>
-                        <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="300" height="200">                        
+                        <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="900" height="600">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
                         <p>beep</p>
                         <h2 class="section-heading">Tools</h2>
                         <p> add here pls </p>
-                        <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
-                        <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-                        <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-                        <p>
-                            Placeholder text by
-                            <a href="http://spaceipsum.com/">Space Ipsum</a>
-                            &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -106,7 +97,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Roumie 2024</div>
                     </div>
                 </div>
             </div>
