--- a/post4real.html
+++ b/post4real.html
@@ -59,9 +59,14 @@
                         <h2 class="section-heading">Hispanic Population Density in Contiguous US</h2>
                         <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="600" height="1000">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
-                        <p>beep</p>
+                        <p>I created a proportional symbol maps using census data at the national scale. A dot density represents this data well
+                        because it is  visually readable, and the progression of colors/concentration of dots allows viewers to identify which states
+                        have the greatest density/percentage of Hispanic populations in the contiguous U.S. 
+                        To create the dot density map, I right clicked on the shapefile and clicked symbology. I chose: “primary symbology”, I chose dot density. I selected the correct field, then experimented with the dot size and value, 
+                        until I found a dot size and dot value that clearly showed each state's Hispanic population density,  without overwhelming the map. Each dot represents 10,000 people. </p>
                         <h2 class="section-heading">Tools</h2>
-                        <p> add here pls </p>
+                        <p> I focused on symbology tools for this map. I used the “convert to graphics” and “ungroup” tools to edit the legend to be more readable.
+                            I used symbology to edit the colors, dot size, and to choose dot density to represent the data.</p>
                     </div>
                 </div>
             </div>
