--- a/post4real.html
+++ b/post4real.html
@@ -57,7 +57,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">Hispanic Population Density in Contiguous US</h2>
-                        <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="600" height="1000">                        
+                        <img src="hispanicpopdensity.jpg.png" alt="% Hispanic Population Density in US" width="1000" height="750">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
                         <p>I created a proportional symbol maps using census data at the national scale. A dot density represents this data well
                         because it is  visually readable, and the progression of colors/concentration of dots allows viewers to identify which states
