--- a/2post.html
+++ b/2post.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: "polyconic.jpg">
+        <header class="masthead" style="background-image: url(polyconic.jpg)>
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -55,7 +55,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h2 class="section-heading">2020 Election Map: Percentage of Democratic and Republican Votes by PA Counties </h2>
-                        <img src="editedelectionmap.jpg" alt="2020 Election Map" width="850" height="600">                        
+                        <img src="editedelectionmap.jpg" alt="2020 Election Map" width="750" height="600">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
                         <p>beep</p>
                         <h2 class="section-heading">Tools</h2>
