--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: robinson.jpg">
+        <header class="masthead" style="background-image: url(robinson.jpg)">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -55,8 +55,7 @@
                             I chose to include maps that are different to show the different skills and types of maps I learned how to make.
                             This includes a dot density map and two choropleth maps. 
                             I have also included a short narrative of the process of creating each map, and a brief description of some important 
-                            tools I used for each one. 
-                            <p>Thank you!</p>
+                            tools I used for each one. </p>
                     </div>
                 </div>
             </div>
