--- a/post.html
+++ b/post.html
@@ -57,9 +57,18 @@
                         <h2 class="section-heading">Percentage of Occupied Housing by Census Tracts in Miami</h2>
                         <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="750" height="1000">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
-                        <p>beep</p>
+                        <p> The problem this map aims to solve is finding the density of occupied housing in Miami, Florida
+                            by census tracts. In order to find the density of occupied housing in this city, I joined a table 
+                            consisting of Miami data with the Miami tracts shapefile/polygons. Then, I created and calculated 
+                            geometry for a new field representing the area of each census tract. I created another new field 
+                            to represent the percentage of occupied housing for each tract, and calculated this field by dividing 
+                            the occupied housing data by the area I had calculated, in order to find the density. I selected “graduated colors” 
+                            as the primary symbology in order to create a choropleth map, and used the advanced symbology options to appropriately 
+                            label the values as percentages. </p>
                         <h2 class="section-heading">Tools</h2>
-                        <p> add here pls </p>
+                        <p>I used the join tool to create a new shapefile containing all the data from the census tract shapefile and the data table. 
+                            I also used the calculate geometry tool to find the area of the tracts, and calculate the field to find the density of 
+                            occupied housing. Finally, I used (advanced) symbology tools to create the choropleth map, and to present percentages on the legend.</p>
                     </div>
                 </div>
             </div>
