--- a/post.html
+++ b/post.html
@@ -66,9 +66,11 @@
                             as the primary symbology in order to create a choropleth map, and used the advanced symbology options to appropriately 
                             label the values as percentages. </p>
                         <h2 class="section-heading">Tools</h2>
-                        <p>I used the join tool to create a new shapefile containing all the data from the census tract shapefile and the data table. 
-                            I also used the calculate geometry tool to find the area of the tracts, and calculate the field to find the density of 
-                            occupied housing. Finally, I used (advanced) symbology tools to create the choropleth map, and to present percentages on the legend.</p>
+                        <p>Some important tools I used include:</p>
+                        <p>- Join</p>
+                       <p>- Calculate Geometry</p> 
+                        <p>- Calucate Field</p>
+                        <p>- Symbology: Category (percentage), graduated colors </p>
                     </div>
                 </div>
             </div>
