--- a/post4real.html
+++ b/post4real.html
@@ -63,8 +63,11 @@
                         To create the dot density map, I right clicked on the shapefile and clicked symbology. I chose: “primary symbology”, I chose dot density. I selected the correct field, then experimented with the dot size and value, 
                         until I found a dot size and dot value that clearly showed each state's Hispanic population density,  without overwhelming the map. Each dot represents 10,000 people. </p>
                         <h2 class="section-heading">Tools</h2>
-                        <p> I focused on symbology tools for this map. I used the “convert to graphics” and “ungroup” tools to edit the legend to be more readable.
-                            I used symbology to edit the colors, dot size, and to choose dot density to represent the data.</p>
+                       <p> Some important tools I used include: </p>
+                        <p>- Symbology </p>
+                        <p>- Layout</p>
+                        <p>- Data field indentification/use </p>
+                        <p>- Map element use/placement: Convert to graphics, ungroup</p>
                     </div>
                 </div>
             </div>
