--- a/post.html
+++ b/post.html
@@ -42,7 +42,7 @@
                             <span class="meta">
                                 Posted by
                                 <a href="#!">Kayla Roumie</a>
-                                on June 22, 2024
+                                on June 16, 2024
                             </span>
                         </div>
                     </div>
@@ -57,12 +57,12 @@
                         <h2 class="section-heading">Percentage of Occupied Housing by Census Tracts in Miami</h2>
                         <img src="percentoccupiedhousing.jpg" alt="% Occupied Housing in Miami" width="750" height="1000">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
-                        <p> The problem this map aims to solve is finding the density of occupied housing in Miami, Florida
+                        <p> The problem this map aims to solve is the density of occupied housing in Miami, Florida
                             by census tracts. In order to find the density of occupied housing in this city, I joined a table 
-                            consisting of Miami data with the Miami tracts shapefile/polygons. Then, I created and calculated 
-                            geometry for a new field representing the area of each census tract. I created another new field 
-                            to represent the percentage of occupied housing for each tract, and calculated this field by dividing 
-                            the occupied housing data by the area I had calculated, in order to find the density. I selected “graduated colors” 
+                            consisting of Miami data with the Miami tracts shapefile. Then, I created a new field representing 
+                            the area of each census tract, and calculated geometry in order to find the area of each tract per square kilometer. 
+                            I created another a new field representing the percentage of occupied housing for each tract, and calculated that field. 
+                            I selected “graduated colors” 
                             as the primary symbology in order to create a choropleth map, and used the advanced symbology options to appropriately 
                             label the values as percentages. </p>
                         <h2 class="section-heading">Tools</h2>
