--- a/post4real.html
+++ b/post4real.html
@@ -42,7 +42,7 @@
                             <span class="meta">
                                 Posted by
                                 <a href="#!">Kayla Roumie</a>
-                                on June 22, 2024
+                                on June 4, 2024
                             </span>
                         </div>
                     </div>
@@ -57,11 +57,12 @@
                         <h2 class="section-heading">Hispanic Population Density in Contiguous US</h2>
                         <img src="hispanicpopdensity.jpg.png" alt="% Hispanic Population Density in US" width="750" height="600">                        
                         <h2 class="section-heading">Narrative: How I solved the problem</h2>
-                        <p>I created a proportional symbol maps using census data at the national scale. A dot density represents this data well
-                        because it is  visually readable, and the progression of colors/concentration of dots allows viewers to identify which states
+                        <p> The problem this map aims to solve is the population density of Hispanic populations in the contiguous United States.
+                           In order to solve this problem, I created a proportional symbol map using census data at the national scale. A dot density represents this data well
+                        because it is visually readable, and the progression of colors/concentration of dots allows viewers to identify which states
                         have the greatest density/percentage of Hispanic populations in the contiguous U.S. 
                         To create the dot density map, I right clicked on the shapefile and clicked symbology. I chose: “primary symbology”, I chose dot density. I selected the correct field, then experimented with the dot size and value, 
-                        until I found a dot size and dot value that clearly showed each state's Hispanic population density,  without overwhelming the map. Each dot represents 10,000 people. </p>
+                        until I found a dot size and dot value that clearly showed each state's Hispanic population density, without overwhelming the map. Each dot represents 10,000 people. </p>
                         <h2 class="section-heading">Tools</h2>
                        <p> Some important tools I used include: </p>
                         <p>- Symbology </p>
