--- a/2post.html
+++ b/2post.html
@@ -61,7 +61,7 @@
                             This choropleth map uses color to convey which candidate received the majority vote in each county, and the percentage of votes for that candidate.
                             I joined the Pennsylvania voting data with the Pennsylvania counties polygon, and created a new shapefile. I selected by attribute in order to find 
                             the counties in which Biden received 49%+ of the vote, and those in which Trump received 50%+ of the vote, and exported those selections into their own shapefiles. 
-                            I moved those layers to the top of the contents pane, and selected graduated colors and blue and red (respectively) in the symbology pane. I used a manual 
+                            I moved those layers to the top of the contents pane, and selected graduated colors (blue and red respectively) in the symbology pane. I used a manual 
                             interval and edited the labels to associate each color with a certain range of percentage of votes. I also utilized the advanced symbology options to change 
                             the category from “numeric” to “percentage”. 
 </p>
