--- a/post4real.html
+++ b/post4real.html
@@ -61,7 +61,7 @@
                            In order to solve this problem, I created a proportional symbol map using census data at the national scale. A dot density represents this data well
                         because it is visually readable, and the progression of colors/concentration of dots allows viewers to identify which states
                         have the greatest density/percentage of Hispanic populations in the contiguous U.S. 
-                        To create the dot density map, I right clicked on the shapefile and clicked symbology. I chose: “primary symbology”, I chose dot density. I selected the correct field, then experimented with the dot size and value, 
+                        To create the dot density map, I selected "dot density" under primary symbology. I selected the correct field, then experimented with the dot size and value, 
                         until I found a dot size and dot value that clearly showed each state's Hispanic population density, without overwhelming the map. Each dot represents 10,000 people. </p>
                         <h2 class="section-heading">Tools</h2>
                        <p> Some important tools I used include: </p>
