--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Hello!</p>
-                        <p>On this website, there is a few of the maps I made using ArcGIS Pro this semester. 
-                            I chose to include maps that are different to show the different skills and types of maps I learned how to make.
-                            This includes a dot density map and two choropleth maps. 
-                            I have also included a short narrative of the process of creating each map, and a brief description of some important 
+                        <p>On this website, there are a few of the maps I made using ArcGIS Pro this semester. 
+                            I chose to include maps that are different to show the different skills and types of maps I learned how to make:
+                            this includes a dot density map and two choropleth maps, one of which is an election map. 
+                            I have also included a short narrative of the process of creating each map, and a brief list of some important 
                             tools I used for each one. </p>
                     </div>
                 </div>
